test/corpus/assign.txt
================================================================================
Assignment of literal
================================================================================

{% assign x = 1 %}

--------------------------------------------------------------------------------

(program
  (ERROR
    (UNEXPECTED '{'))
  (assignment
    (identifier)
    (number))
  (ERROR
    (UNEXPECTED '%')))

================================================================================
Assignment of variable
================================================================================

{% assign products = collection.products %}

--------------------------------------------------------------------------------

(program
  (ERROR
    (UNEXPECTED '{'))
  (assignment
    (identifier)
    (access
      (identifier)
      (identifier)))
  (ERROR
    (UNEXPECTED '%')))

================================================================================
Assignment of filter
================================================================================

{% assign products = collection.products | first %}

--------------------------------------------------------------------------------

(program
  (ERROR
    (UNEXPECTED '{'))
  (assignment
    (identifier)
    (filter
      (access
        (identifier)
        (identifier))
      (identifier)))
  (ERROR
    (UNEXPECTED '%')))
