test/corpus/filter.txt
================================================================================
One pipe
================================================================================

{{ product.title | upcase }}

--------------------------------------------------------------------------------

(program
  (ERROR
    (UNEXPECTED '{'))
  (filter
    (access
      (identifier)
      (identifier))
    (identifier))
  (ERROR
    (UNEXPECTED '}')))

================================================================================
Multiple pipes
================================================================================

{{ collection.title | split: '' | reverse | join: '' }}

--------------------------------------------------------------------------------

(program
  (ERROR
    (UNEXPECTED '{'))
  (filter
    (filter
      (filter
        (access
          (identifier)
          (identifier))
        (identifier)
        (argument_list
          (string)))
      (identifier))
    (identifier)
    (argument_list
      (string)))
  (ERROR
    (UNEXPECTED '}')))
