test/corpus/if_elseif_else.txt
================================================================================
If
================================================================================

if 1 == 1
  1
  2
  3
endif

--------------------------------------------------------------------------------

(program
  (if_tag
    (binary_expression
      (number)
      (comparision_operator)
      (number))
    (block
      (number)
      (number)
      (number))))

================================================================================
If with consequence on the same line
================================================================================

if 1 == 1 1 2 3
endif

--------------------------------------------------------------------------------

(program
  (if_tag
    (binary_expression
      (number)
      (comparision_operator)
      (number))
    (block
      (number)
      (number)
      (number))))

================================================================================
If with empty body
================================================================================

if 1 == 1
endif

--------------------------------------------------------------------------------

(program
  (if_tag
    (binary_expression
      (number)
      (comparision_operator)
      (number))))

================================================================================
If-else
================================================================================

if true
 1
else
 1
endif

--------------------------------------------------------------------------------

(program
  (if_tag
    (boolean)
    (block
      (number))
    (else_tag
      (block
        (number)))))

================================================================================
If-else with empty body
================================================================================

if true
else
endif

--------------------------------------------------------------------------------

(program
  (if_tag
    (boolean)
    (else_tag)))

================================================================================
If-elseif
================================================================================

if 1 == x
  1 2
elseif 2
  1 2
elseif 5
  1 2
elseif 3
  1 2
else
  1 2
endif

--------------------------------------------------------------------------------

(program
  (if_tag
    (binary_expression
      (number)
      (comparision_operator)
      (identifier))
    (block
      (number)
      (number))
    (elseif_tag
      (number)
      (block
        (number)
        (number)))
    (elseif_tag
      (number)
      (block
        (number)
        (number)))
    (elseif_tag
      (number)
      (block
        (number)
        (number)))
    (else_tag
      (block
        (number)
        (number)))))

================================================================================
If-elseif with empty body
================================================================================

if 1 == x
elseif 2
elseif 5
elseif 3
else
endif

--------------------------------------------------------------------------------

(program
  (if_tag
    (binary_expression
      (number)
      (comparision_operator)
      (identifier))
    (elseif_tag
      (number))
    (elseif_tag
      (number))
    (elseif_tag
      (number))
    (else_tag)))

================================================================================
Nested statements
================================================================================

if a
  if b
    if c
      c
    endif
  endif
else
  d
endif

--------------------------------------------------------------------------------

(program
  (if_tag
    (identifier)
    (block
      (if_tag
        (identifier)
        (block
          (if_tag
            (identifier)
            (block
              (identifier))))))
    (else_tag
      (block
        (identifier)))))
