test/corpus/unless.txt
================================================================================
Unless
================================================================================

{% unless 1 == 1 %}
  {{ 1 }}
  {{ 2 }}
  {{ 3 }}
{% endunless %}

--------------------------------------------------------------------------------

(program
  (ERROR
    (UNEXPECTED '{'))
  (unless_tag
    (binary_expression
      (number)
      (comparision_operator)
      (number))
    (ERROR
      (UNEXPECTED '%'))
    (block
      (number)
      (ERROR
        (UNEXPECTED '}'))
      (number)
      (ERROR
        (UNEXPECTED '}'))
      (number))
    (ERROR
      (UNEXPECTED '}')))
  (ERROR
    (UNEXPECTED '%')))

================================================================================
Unless with empty body
================================================================================

{% unless 1 == 1 %}
{% endunless %}

--------------------------------------------------------------------------------

(program
  (ERROR
    (UNEXPECTED '{'))
  (unless_tag
    (binary_expression
      (number)
      (comparision_operator)
      (number))
    (ERROR
      (UNEXPECTED '%')))
  (ERROR
    (UNEXPECTED '%')))
